fixing page overflow

--- a/css/ytgrid.css
+++ b/css/ytgrid.css
@@ -2,6 +2,10 @@ body {
 	font-family: 'Lato', sans-serif;
 }
 
+.container .row {
+	margin: 0 !important;
+}
+
 a:hover {
 	cursor: pointer;
 }
@@ -333,7 +337,7 @@ footer input {
 }
 
 #settings {
-	width: 60%;
+	width: 55%;
 }
 
 #info {
